public/style.css
@font-face {
  font-family: StarJedi;
  src: url(/Starjedi.ttf);
}

@font-face {
  font-family: Aurebesh;
  src: url(/Aurebesh.ttf);
}

body {
  background: url('/backgrounds/millenium.jpeg') no-repeat center center fixed, linear-gradient(rgba(5, 8, 46, 0.712), rgba(53, 0, 0, 0.801));
  background-size: 100% 100% contain;
}


a {
  text-decoration: none;
}

label {
  display: block;
}

nav a {
  display: inline-block;
  margin: 1em;
}

form div {
  color: white;
  margin: 1em;
  display: inline-block;
}

/* materializecss overrides */
/* selector colors */
/* .switch label .lever {
  background-color: #79ff4d;
} */
.switch {
  margin-top: 1rem;
  margin-bottom: 1rem;
}

.switch label input[type='checkbox']:checked + .lever {
  background-color: #fff2035d;
}
.switch label input[type='checkbox']:checked + .lever:after {
  background-color: #fff103;
}

.input-field input[type='text'] + label,
.materialize-textarea:focus:not([readonly]) + label {
  color: #1a237e !important;
}

.input-field input[type='text'],
.materialize-textarea:focus:not([readonly]) {
  border-bottom: 1px solid #bbb !important;
  box-shadow: 0 1px 0 0 #bbb !important;
}

.input-field input[type='text']:focus + label,
.materialize-textarea:focus:not([readonly]) + label {
  color: #fff103 !important;
}

.input-field input[type='text']:focus,
.materialize-textarea:focus:not([readonly]) {
  border-bottom: 1px solid #fff103 !important;
  box-shadow: 0 1px 0 0 #fff103 !important;
}

/* positioning toast continer (override materialize css) */
#toast-container {
  bottom: auto !important;
  left: auto !important;
  top: 2%;
  right: 6%;
}





/* Editor Styles */
/* Variables */
:root {
    --editor-bg: #333;
    --editor-border: #b8b8b8;
}

/* Reset Styles */
* {
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Courier New'
}

html, body {
    height: 100%;
    width: 100%;
}

.testImg {
    display: flex;
    justify-content: center;
    align-items: center;
}

.testImg img {
    width: 50%;
    margin: 1.5rem;
}

.prompt {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    margin-top: 3rem;
    margin-bottom: 3rem;
}

.challenge {
    padding-top: 3rem;
}

.switch {
  display: flex;
  justify-content: center;
}

/* CodePenClone Styling */
.editor-container {
    margin-top: 1rem;
    height: 30rem;
    width: 80%;
    margin-left: auto;
    margin-right: auto;
    flex-grow: 0.5;
    flex-basis: 0;
    display: flex;
    flex-direction: column;
}

.pane {
    margin-left: auto;
    margin-right: auto;
    display: flex;
    background-color: #ccc;
    width: 80%;
    height: 130px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
}

.CodeMirror {
  height: 100% !important;
  font-size: 1rem;
}

.code-mirror-wrapper {
  flex-grow: 1;
  overflow: hidden;
  background: rgba(0, 0, 0, 0.7)
}

.run-btn {
  display: flex;
  width: 80%;
  margin-left: auto;
  margin-right: auto;
}

.run-btn button {
  padding: 0.2rem;
  margin: 0.5rem;
}

